--- a/InPrint/app/src/main/res/values/strings.xml
+++ b/InPrint/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">InPrint</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_home">Send</string>
+    <string name="title_dashboard">Login</string>
     <string name="title_notifications">Notifications</string>
 </resources>
